--- a/lib/generators/views/templates/views/show.html.erb
+++ b/lib/generators/views/templates/views/show.html.erb
@@ -8,4 +8,4 @@
 <%= "<%== @#{singular_name}.as_html %%>" %>
 </div>
 
-<%= "<%= link_to 'Edit', edit_#{singular_name}_path(@#{singular_name}) %%> | <%= link_to 'Back', #{singular_name}_path %%>" %>
+<%= "<%= link_to 'Edit', edit_#{singular_name}_path(@#{singular_name}) %%> | <%= link_to 'Back', #{plural_name}_path %%>" %>
