add upload functionality to generated gallery

--- a/lib/generators/views/templates/fileViews/_add_file.html.erb
+++ b/lib/generators/views/templates/fileViews/_add_file.html.erb
@@ -1,4 +1,4 @@
-<%= "<%= form_with(model: gallery, local: true) do |form| %%>" %>
+<%= '<%= form_with(model: gallery, url:"/galleries/#{gallery.id}/upload") do |form| %%>' %>
 <%= "<% if gallery.errors.any? %%>" %>
   <%= "<div id='error_explanation'>" %>
     <%= "<h2><%= pluralize(gallery.errors.count, 'error') %%> prohibited this component from being saved:</h2>" %>
