--- a/lib/generators/views/templates/fileViews/_form.html.erb
+++ b/lib/generators/views/templates/fileViews/_form.html.erb
@@ -12,6 +12,7 @@
 <%= "<% end %%>" %>
 
 <%= "<div class='field'>" %>
+  <%= "<%= form.label 'name' %%>" %>
   <%= "<%= form.text_field :name %%>" %>
 <%= "</div>" %>
 
