--- a/lib/generators/views/templates/fileViews/edit.html.erb
+++ b/lib/generators/views/templates/fileViews/edit.html.erb
@@ -1,3 +1,3 @@
 <%= "<h1>Editing #{singular_name.capitalize}</h1>" %>
 <%= "<%= render 'add_file', #{singular_name}: @#{singular_name} %%>" %>
-<%= "<%= link_to 'Back to #{singular_name}', @#{singular_name} | link_to 'List #{plural_name}', #{plural_name}_path %%>" %>
+<%= "<%= link_to 'Show #{singular_name}', @#{singular_name} %%> | <%= link_to 'All #{plural_name}', #{plural_name}_path %%>" %>
