refine generators to improve change resilience and generate Gooey::Group with common code

--- a/lib/generators/views/templates/componentViews/edit.html.erb
+++ b/lib/generators/views/templates/componentViews/edit.html.erb
@@ -2,4 +2,5 @@
 
 <%= "<%= render 'form', #{singular_name}: @#{singular_name} %%>" %>
 
-<%= [render_meta_link('Show',"@#{singular_name}"),render_meta_link('Back',"#{plural_name}_path")].join(" | ") %> 
+<%= "<%= link_to 'Show', @#{singular_name} %%>" %> |
+<%= "link_to 'Back', #{plural_name}_path %%>" %>
