--- a/lib/generators/views/templates/componentViews/new.html.erb
+++ b/lib/generators/views/templates/componentViews/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= "<%= render 'form', #{singular_name}: @#{singular_name} %%>" %>
 
-<%= render_meta_link('Back',"#{plural_name}_path") %>
+<%= "link_to 'Back', #{plural_name}_path %%>" %>
