--- a/lib/generators/views/templates/groupViews/index.html.erb
+++ b/lib/generators/views/templates/groupViews/index.html.erb
@@ -1,28 +1,27 @@
 <%= "<p id='notice'><%= notice %%></p>" %>
 
-<%=" <h1> #{plural_name.capitalize} </h1>" %>
+<%= "<h1>Pages</h1>" %>
 
-<%= "<table class='table'>" %>
+<%= "<table>" %>
   <%= "<thead>" %>
     <%= "<tr>" %>
-        <%= "<th>Name</th>" %>
-        <%= "<th>count</th>" %>
-        <%= "<th colspan=3></th>" %>
+      <%= "<th>name</th>" %>
+      <%= "<th colspan=3></th>" %>
     <%= "</tr>" %>
   <%= "</thead>" %>
 
   <%= "<tbody>" %>
     <%= "<% @#{plural_name}.each do |#{singular_name}| %%>" %>
       <%= "<tr>" %>
-          <%= "<td> <%= #{singular_name}.name %%> </td>" %>
-          <%= "<td> <%= #{singular_name}.files.count %%> </td>" %>
-          <%= "<td><%= link_to 'Show', #{singular_name}_path(#{singular_name}), class: 'btn btn-sm btn-outline-info' %%></td>" %>
-        <%= "<td><%= link_to 'Edit', edit_#{singular_name}_path(#{singular_name}) %%></td>" %>
+        <%= "<td> <%= #{singular_name}.name %%> </td>" %>
+        <%= "<td><%= link_to 'Show', #{singular_name}_path(page), class: 'btn btn-sm btn-outline-info' %%></td>" %>
+        <%= "<td><%= link_to 'Edit', edit_#{singular_name}_path(page) %%></td>" %>
         <%= "<td><%= link_to 'Destroy', #{singular_name}, method: :delete, data: { confirm: 'Are you sure?' } %%></td>" %>
       <%= "</tr>" %>
      <%= "<% end %%>" %>
   <%= "</tbody>" %>
 <%= "</table>" %>
+
 <%= "<br>" %>
 
 <%= "<%= link_to 'New #{singular_name.capitalize}', new_#{singular_name}_path %%>" %>
