--- a/lib/generators/views/templates/componentViews/edit.html.erb
+++ b/lib/generators/views/templates/componentViews/edit.html.erb
@@ -1,6 +1,9 @@
 <%= "<h1>Editing #{singular_name.capitalize}</h1>" %>
 
+<%= "<div class='container' style='zoom:.7'>" %>
+  <%= "<%== @#{singular_name}.as_html %$>" %>
+<%= "</div>" %>
+
 <%= "<%= render 'form', #{singular_name}: @#{singular_name} %%>" %>
 
-<%= "<%= link_to 'Show', @#{singular_name} %%>" %> |
-<%= "link_to 'Back', #{plural_name}_path %%>" %>
+<%= [render_meta_link('Show',"@#{singular_name}"),render_meta_link('Back',"#{plural_name}_path")].join(" | ") %>
