--- a/lib/generators/views/templates/groupViews/show.html.erb
+++ b/lib/generators/views/templates/groupViews/show.html.erb
@@ -1,3 +1,3 @@
 <%= "<div class='container'>" %>
-  <%= "<%== @#{singular_name}.as_html %$>" %>
+  <%= "<%== @#{singular_name}.as_html %%>" %>
 <%= "</div>" %>
